--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "jenkins-slack-connector",
   "version": "1.0.0",
   "description": "App to run Jenkins pipelines with Slack commands.",
-  "main": "app.ts",
+  "main": "src/app.ts",
   "scripts": {
-    "start": "ts-node app.ts",
+    "start": "ts-node src/app.ts",
     "build": "tsc -p tsconfig.json",
-    "lint": "eslint --ext .ts ./ --fix",
+    "lint": "eslint ./src --fix",
     "test": "jest",
     "test:coverage": "jest --coverage",
     "test:update-snapshots": "jest --updateSnapshot"
@@ -18,7 +18,7 @@
   "author": "Fedor Shchudlo",
   "license": "Apache 2.0",
   "dependencies": {
-    "@slack/bolt": "^3.21.4",
+    "@slack/bolt": "^3.22.0",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "ts-node": "^10.4.0"
@@ -26,13 +26,11 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.13",
-    "@types/node": "^22.7.0",
-    "@typescript-eslint/eslint-plugin": "^8.7.0",
-    "@typescript-eslint/parser": "^8.7.0",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
+    "@types/node": "^22.7.5",
+    "eslint": "^9.12.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
-    "typescript": "^5.5.4"
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.8.1"
   }
 }
